# rvst

./: .gitignore  AGENTS.md  Cargo.toml  DEEP_SERVO_COMPARISON.md  README.md  SERVO_REFERENCE.md  STYLO_INTEGRATION.md  ZAIUS_GAP_AUDIT.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-npm.yml
agents/.claude-plugin/: plugin.json
agents/skills/rvst-cli/: SKILL.md
agents/skills/rvst-validation/: SKILL.md
benchmarks/app/src/: App.svelte  DataExplorer.svelte  entry-rvst.js  entry.js
benchmarks/app/src/lib/: dataset.js  harness.js
benchmarks/apps/electron/: main.cjs  package-lock.json  package.json  preload.cjs  vite.config.js
benchmarks/apps/rvst/: package-lock.json  package.json  vite.config.js
benchmarks/apps/rvst/src/: entry.js
benchmarks/apps/shared/src/: App.svelte  Dashboard.svelte  DataTable.svelte  StressTest.svelte  bench.js  entry-rvst.js  entry.js  styles.css
benchmarks/apps/tauri/: index.html  package-lock.json  package.json
benchmarks/apps/tauri/src/: entry.js
benchmarks/apps/tauri/src-tauri/: Cargo.toml
benchmarks/dom_throughput/: bench.js  run.sh
benchmarks/results/: comparison.md  latest.json
benchmarks/runner/: bench.py  bench.sh  report.py
benchmarks/targets/electron/: main.cjs  package-lock.json  package.json  preload.cjs  vite.config.js
benchmarks/targets/rvst/: package-lock.json  package.json  vite.config.js
benchmarks/targets/tauri/: index.html  package-lock.json  package.json
benchmarks/targets/tauri/src-tauri/: tauri.conf.json
crates/rvst-analyze/: Cargo.toml
crates/rvst-analyze/src/: a11y.rs  contrast.rs  diagnostics.rs  heatmap.rs  layout.rs  lib.rs  report.rs
crates/rvst-blitz-bridge/: Cargo.toml
crates/rvst-blitz-bridge/src/: lib.rs
crates/rvst-core/: Cargo.toml
crates/rvst-core/src/: lib.rs  node.rs  ops.rs
crates/rvst-diagram/: Cargo.toml
crates/rvst-diagram-harness/: Cargo.toml
crates/rvst-diagram-harness/fixtures/: basic_group.json  branching_dag.json  dense_mix.json  grid_4.json  large_12.json  long_label.json  minimal_2.json  nested_groups.json  rich_content.json  split_frame0.json  split_frame1.json  with_edges.json  with_images.json
crates/rvst-diagram-harness/src/: animate.rs  edges_validation.rs  fixture_suite.rs  font_validation.rs  graph_build_validation.rs  graph_validation.rs  headless_validation.rs  inspector_validation.rs  layout_validation.rs  main.rs  phase1_gate.rs  retry_validation.rs  score_loop.rs  split_validation.rs  text_validation.rs
crates/rvst-diagram/src/: build_graph.rs  draw_edges.rs  edges.rs  graph.rs  graph_metrics.rs  lib.rs  pipeline.rs  retry.rs  scale.rs  schema.rs  score.rs  sketch.rs  split.rs
crates/rvst-editor/: Cargo.toml
crates/rvst-editor/src/: command.rs  input.rs  lib.rs  node.rs  render.rs  selection.rs  state.rs  text_util.rs  transaction.rs
crates/rvst-engine/: Cargo.toml
crates/rvst-engine/src/: animation.rs  composite.rs  css.rs  diff.rs  inspector.rs  layout.rs  lib.rs  transition.rs
crates/rvst-macro/: Cargo.toml
crates/rvst-macro/src/: lib.rs
crates/rvst-quickjs/: Cargo.toml
crates/rvst-quickjs/src/: commands.rs  event_loop.rs  lib.rs  native_svelte.rs  ops.rs  signal_graph.rs  stubs.js  stubs.rs  subscriptions.rs  timers.rs
crates/rvst-quickjs/src/builtins/: compress.rs  crypto.rs  fs.rs  mod.rs  system.rs
crates/rvst-quickjs/tests/: event_loop.rs
crates/rvst-render-wgpu/: Cargo.toml
crates/rvst-render-wgpu/src/: blit.wgsl  lib.rs
crates/rvst-shell/: Cargo.toml
crates/rvst-shell/examples/: render_png.rs  screenshots.rs
crates/rvst-shell/src/: ascii.rs  composite.rs  css.rs  inspector.rs  layout.rs  lib.rs  main.rs  renderquery_benchmark.rs  snapshot.rs  spacing_analyzer.rs  test_harness.rs
crates/rvst-shell/tests/: examples_test.rs  inspector_test.rs  render_test.rs  snapshot_test.rs
crates/rvst-snapshot/: Cargo.toml
crates/rvst-snapshot/src/: ascii.rs  lib.rs
crates/rvst-stylo/: Cargo.toml
crates/rvst-stylo/src/: adapter.rs  cascade.rs  lib.rs  values.rs
crates/rvst-text/: Cargo.toml
crates/rvst-text/src/: lib.rs
crates/rvst-tree/: Cargo.toml
crates/rvst-tree/src/: lib.rs
crates/rvst-web/: Cargo.toml
crates/rvst-web/src/: events.rs  lib.rs
js/renderer-bridge-js/: package.json  renderer-bridge-js
js/renderer-bridge-js/src/: index.js  renderer.js
js/renderer-bridge-web/: README.md  package.json
js/renderer-bridge-web/src/: index.js
js/rvst-api/: package-lock.json  package.json
js/rvst-api/src/: index.js  native-descriptor.js  native-descriptor.test.js  parser.js  parser.test.js  types.js
js/rvst-api/src/codegen/: client.js  client.test.js  proto.js  proto.test.js  rust.js  rust.test.js  ts_from_rust.js  ts_from_rust.test.js
js/rvst-api/src/runtime/: grpc.js  index.js  transport.js  transport.test.js
js/rvst-codegen/: package-lock.json  package.json
js/rvst-codegen/src/: index.js  index.test.js
js/vite-plugin-rvst/: package-lock.json  package.json
js/vite-plugin-rvst/src/: capabilities.js  capabilities.test.js  capability-runtime.js  config-parser.js  config-parser.test.js  dts-generator.js  index.js  rust-extractor.js  rust-extractor.test.js  rvst-rune-rewrite.js  rvst-rune-rewrite.test.js  transport.js
scripts/: gen-ascii-screenshots.py  gen-carousel.py  screenshot.sh  validate.mjs
skills/rvst/: SKILL.md
skills/rvst/rules/: architecture.md  css.md  dom-stubs.md  known-gaps.md  layout.md  npm.md  rendering.md  templates.md  validation.md
(+6 files in other folders)
