[package]
name = "rvst-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rvst-core = { path = "../rvst-core" }
rvst-tree = { path = "../rvst-tree" }
rvst-text = { path = "../rvst-text" }
lightningcss = { version = "1.0.0-alpha.71", default-features = false }
taffy = "0.9"
vello = "0.8"
peniko = "0.6"
kurbo = "0.13"
skrifa = "0.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
