[package]
name = "rvst-quickjs"
version = "0.1.0"
edition = "2021"

[dependencies]
rvst-core = { path = "../rvst-core" }
rquickjs = { version = "0.11", features = ["bindgen", "parallel"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inventory = "0.3"
ureq = "2"
url = "2"
base64 = "0.22"
sha2 = "0.10"
flate2 = "1"
getrandom = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
