[package]
name = "rvst-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
rvst-tree = { path = "../rvst-tree" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
blitz = ["dep:blitz-dom"]

[dependencies.blitz-dom]
path = "../../../packages/blitz/packages/blitz-dom"
optional = true

[dev-dependencies]
rvst-core = { path = "../rvst-core" }
