[package]
name = "rvst-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rvst-engine = { path = "../rvst-engine" }
rvst-core = { path = "../rvst-core" }
rvst-tree = { path = "../rvst-tree" }
rvst-text = { path = "../rvst-text" }
vello = "0.8"
peniko = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Element",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "AddEventListenerOptions",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "28", features = ["webgpu", "webgl"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"
console_log = "1"
